--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -3,6 +3,9 @@
 @import '_components/_variables.scss';
 @import '_components/_animated-gradient.scss';
 @import '_partials/_navbar.scss';
+@import '_partials/_header_banner.scss';
+@import '_partials/_about_slider.scss';
+@import '_partials/_contact_block.scss';
 @import '_partials/_footer.scss';
 @import '_components/_bootstrap-override.scss';
 @import '_components/_reset.scss';
@@ -24,3 +27,4 @@
 @import '_components/_carousel.scss';
 @import '_components/_pricing.scss';
 @import '_components/_tabs.scss';
+
