--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -13,18 +13,18 @@
 @import '_components/_fonts-icons.scss';
 @import '_components/_forms.scss';
 @import '_components/_typography.scss';
-@import '_components/_buttons.scss';
+//@import '_components/_buttons.scss';
 @import '_components/_section.scss';
-@import '_components/_list.scss';
-@import '_components/_flex.scss';
-@import '_components/_card.scss';
-@import '_components/_hero.scss';
+//@import '_components/_list.scss';
+//@import '_components/_flex.scss';
+//@import '_components/_card.scss';
+//@import '_components/_hero.scss';
 @import '_components/_animations.scss';
-@import '_components/_grid-blocks.scss';
-@import '_components/_grid-floated.scss';
-@import '_components/_collapsed.scss';
-@import '_components/_content.scss';
+//@import '_components/_grid-blocks.scss';
+//@import '_components/_grid-floated.scss';
+//@import '_components/_collapsed.scss';
+//@import '_components/_content.scss';
 @import '_components/_carousel.scss';
-@import '_components/_pricing.scss';
-@import '_components/_tabs.scss';
+//@import '_components/_pricing.scss';
+//@import '_components/_tabs.scss';
 
