--- a/src/template/contact_block.html
+++ b/src/template/contact_block.html
@@ -1,27 +1,38 @@
 <section class="contact_block">
-	<div class="container">
-		<div class="contact_block__inner add-margin">
-			<div class="contact_block__form-wrap">
-				<ul class="footer__social">
-					<li class="footer__social-item"><a href="#" class="footer__social-link"><i class="inbrace-icon-facebook"></i></a></li>
-					<li class="footer__social-item"><a href="#" class="footer__social-link"><i class="inbrace-icon-twitter"></i></a></li>
-				</ul>
-				<form action="" class="contact_block__form clearfix">
-					<div class="form_group">
-						<input type="text" class="form-control form-control-md">
-						<input type="email" class="form-control form-control-md">
-						<input type="submit" value="submit">
-					</div>
-					<div class="form_group">
-						<textarea name="message"> message</textarea>
-					</div>
-				</form>
-			</div>
-			<div class="contact_block__map">
-map!!!
-			</div>
+    <div class="container">
+        <div class="add-margin clearfix">
+            <div class="section-title">contact us</div>
 
+            <div class="contact_block__wrap">
+                <div class="clearfix">
+                    <div class="contact_block__map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d41038.026069204905!2d36.24153606671177!3d49.9949224115113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sua!4v1488708284136"
+                                frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                    <div class="contact-info">
+                        <p>Barcelona, Spain
+                            Get Directions
+                            @getnailedbykarina
+                            Message Now
+                            Call +33 6 01 64 36 50</p>
+                    </div>
+                    <ul class="contact_block__social">
+                        <li class="contact__social-item"><a href="#" class="contact__social-link"><i
+                                class="icon-facebook"></i></a></li>
+                        <li class="contact__social-item"><a href="#" class="contact__social-link"><i
+                                class="icon-twitter"></i></a></li>
+                    </ul>
+                </div>
 
-		</div><!-- footer__inner -->
-	</div><!-- container -->
+                <form action="" class="contact_block__form clearfix">
+                    <div class="form_group">
+                        <textarea name="message" placeholder="message"></textarea>
+                        <input type="text" class="form-control form-control-md">
+                        <input type="email" class="form-control form-control-md">
+                        <input type="submit" value="submit">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div><!-- container -->
 </section>
