--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
-	<div class="container">
-		<div class="footer__logo">
-			logo
-		</div>
-		<div class="copyright">copyright 2017 <a href="#">www.getnaled.co</a> all rights reserved</div>
-	</div><!-- container -->
+    <div class="container">
+        <div class="footer__logo">
+            <a href="#"><img src="assets/images/logo_white.png" alt=""></a>
+        </div>
+        <div class="copyright">copyright 2017 <a href="#">www.getnaled.co</a> all rights reserved</div>
+    </div><!-- container -->
 </footer>
