--- a/src/assets/stylesheets/_partials/_contact_block.scss
+++ b/src/assets/stylesheets/_partials/_contact_block.scss
@@ -114,6 +114,9 @@
     position: relative;
     bottom: 0;
   }
+  @include respond-to(xs-small) {
+    display: none;
+  }
 }
 
 .contact-info {
@@ -127,6 +130,9 @@
   p {
     width: 180px;
   }
+  @include respond-to(xs-small) {
+    float: none;
+  }
 }
 .contact_block__social {
   width: 56%;
@@ -135,6 +141,9 @@
   margin-bottom: 35px;
   li {
     display: inline-block;
+  }
+  @include respond-to(xs-small) {
+    width: 100%;
   }
 
 }
