--- a/src/assets/stylesheets/_components/_section.scss
+++ b/src/assets/stylesheets/_components/_section.scss
@@ -15,6 +15,7 @@
 }
 
 .section-title {
+  position: relative;
   width: 320px;
   height: 50px;
   margin: 0 auto;
@@ -23,6 +24,10 @@
   line-height: 50px;
   text-align: center;
   box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.67);
+  z-index: 5;
+  @include respond-to(xs-small) {
+    width: 230px;
+  }
 }
 
 .section {
