--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -4,7 +4,9 @@
 @import '_components/_animated-gradient.scss';
 @import '_partials/_navbar.scss';
 @import '_partials/_header_banner.scss';
+@import '_partials/_about.scss';
 @import '_partials/_about_slider.scss';
+@import '_partials/_brands.scss';
 @import '_partials/_contact_block.scss';
 @import '_partials/_footer.scss';
 @import '_components/_bootstrap-override.scss';
