--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,8 +1,12 @@
 <footer class="footer">
     <div class="container">
         <div class="footer__logo">
-            <a href="#"><img src="assets/images/logo_white.png" alt=""></a>
+            <a href="#">
+                <img src="assets/images/logo_white.png" alt="">
+            </a>
         </div>
-        <div class="copyright">copyright 2017 <a href="#">www.getnaled.co</a> all rights reserved</div>
+        <div class="copyright">copyright 2017 <a href="#">www.getnaled.co</a>
+            <div>all rights reserved</div>
+        </div>
     </div><!-- container -->
 </footer>
