--- a/src/assets/stylesheets/_components/_variables.scss
+++ b/src/assets/stylesheets/_components/_variables.scss
@@ -84,3 +84,9 @@ $tile-bg-color: #000;
 	Contact section variable
 *************************/
 $contact-bg-color: #0d144b;
+
+/*************************
+	Slider variable
+*************************/
+$slider-arrow-color: #0d144b;
+$slider-arrow-hover-color: #0d199c;
