--- a/src/assets/stylesheets/_components/_variables.scss
+++ b/src/assets/stylesheets/_components/_variables.scss
@@ -30,7 +30,7 @@ $sundown: #FFAEB8;
 $seashell-peach: #FFF4ED;
 /* Green group */
 $viking: #64DDD9;
-$cerulean: #0DBDD1; //Success color
+$cerulean: #5a60d1; //Success color
 /*************************
 	Global color variables
 *************************/
