--- a/src/assets/stylesheets/_partials/_brands.scss
+++ b/src/assets/stylesheets/_partials/_brands.scss
@@ -4,6 +4,9 @@
 .brands_block {
   height: 220px;
   margin-top: 20px;
+  @include respond-to(xs-add) {
+    height: 170px;
+  }
 }
 
 .brands_block .add-margin {
