--- a/src/assets/stylesheets/_partials/_about.scss
+++ b/src/assets/stylesheets/_partials/_about.scss
@@ -1,6 +1,12 @@
 
 /* ABOUT page */
 
+.about_describe h3 {
+  color: #000;
+  font-weight: bold;
+  text-align: center;
+}
+
 .studio {
   position: relative;
   padding-bottom: 40px;
