--- a/src/template/navbar.html
+++ b/src/template/navbar.html
@@ -1,5 +1,16 @@
 <nav class="navbar !navbar-fixed-top">
     <div class="container">
+        <div class="social_wrapper">
+            <a href="#" class="book_now">book now</a>
+            <ul class="header__social">
+                <li class="header__social-item"><a href="#" class="header__social-link"><i
+                        class="icon-facebook"></i></a></li>
+                <li class="header__social-item"><a href="#" class="header__social-link"><i
+                        class="icon-twitter"></i></a></li>
+                <li class="header__social-item"><a href="#" class="header__social-link"><i
+                        class="icon-facebook"></i></a></li>
+            </ul>
+        </div>
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
                     aria-expanded="false">
@@ -21,5 +32,6 @@
                 <li><a href="#">contact us</a></li>
             </ul><!-- navbar-nav -->
         </div><!-- /.navbar-collapse -->
+
     </div><!-- /.container -->
 </nav><!-- navbar -->
