--- a/src/assets/stylesheets/_partials/_about_slider.scss
+++ b/src/assets/stylesheets/_partials/_about_slider.scss
@@ -96,6 +96,7 @@
   .slick-slider {
     position: relative;
     .slick-track {
+      margin-left: 20px;
       padding-top: 50px;
       padding-bottom: 50px;
     }
