--- a/src/template/scripts-dependencies.html
+++ b/src/template/scripts-dependencies.html
@@ -18,6 +18,7 @@
 <script src="assets/vendors/slick-carousel/slick/slick.min.js"></script>
 <script src="assets/vendors/masonry/dist/masonry.pkgd.min.js"></script>
 <script src="assets/vendors/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
+<script src="assets/javascript/instafeed.min.js"></script>
 <script src="assets/javascript/scripts.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDt4OJbv9MGtbHjNIoDL4V3rR2d6YL_TBw&callback=initMap"
         async defer></script>
