--- a/src/template/studios.html
+++ b/src/template/studios.html
@@ -2,6 +2,8 @@
     <div class="section-title">Get naled studio</div>
     <div class="studio_wrap">
         <div class="container">
+
+            <div id="instafeed"></div>
             <div class="studio_item">
                 <img src="assets/images/studios/studios_1.jpg" alt="">
             </div>
